<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_above="@id/tvWelcome"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_love"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_love"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/welcome_text1"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/welcome_text2"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/welcome_text3"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_love"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_love"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/welcome_text4"
            android:textColor="@color/red"
            android:textSize="16sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvJump"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/jump"
        android:textColor="@color/red" />
</RelativeLayout>